Fix missing overflow for table, fix coloscales
closes #10, closes #26

--- a/vismop-vue/src/css/networkGraph.css
+++ b/vismop-vue/src/css/networkGraph.css
@@ -58,8 +58,8 @@
   display: block;
 }
 
-#inputTable {
-  height: 75vh;
+.inputTable {
+  max-height: 80%;
   display: block;
 }
 
@@ -162,4 +162,10 @@ Range slider adapted from: https://codepen.io/chriscoyier/pen/eYNQyPe
 
 .positionCardTitle{
   height: 15%;
+}
+
+.scrollableTable .v-data-table__wrapper{
+  scrollbar-width: thin;
+  overflow-y: scroll;
+  max-height: 60vh;
 }
